ADD TELA DE CADASTRO

--- a/auth/cadastro.html
+++ b/auth/cadastro.html
@@ -17,7 +17,7 @@
             
             <div class="formulario">
                 <div>
-                    <h1>LOGIN</h1>
+                    <h1>CADASTRO</h1>
                     <p>Seja Bem vindo o sistema de Armazenamento de dispositvos TNS </p>
                 </div>
 
